@@ -1,4 +1,5 @@
 1.17 -> 2.0:
+    - devzero2000: add malloc vodo to testit.sh
     - devzero2000: define build-gcov disabled by default
     - devzero2000: fix:  make check work again
     - jbj: remove llvm warning from s/int/size_t/.
